--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,16 +7,16 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="intro-message">
-          <h1>CSM BPI Automation API</h1>
-          <h3>MNL Reporting Data API</h3>
+          <h1>CSM BPI Manual API</h1>
+          <h3>Copy and Paste Data API</h3>
 
           <hr class="intro-divider">
 
           <ul class="list-inline intro-social-buttons">
             <li>
-              <a href="/" class="btn btn-default btn-lg">
+              <a href="/admin" class="btn btn-default btn-lg">
                 <i class="fa fa-bed fa-fw"></i>
-                <span class="network-name">Mail Me</span>
+                <span class="network-name">Copy Paste Reporting</span>
               </a>
             </li>
           </ul>
@@ -33,15 +33,15 @@
 
     <div class="row">
       <div class="col-lg-6">
-        <h2>Connect to MNL Automation:</h2>
+        <h2>Learn to Copy and Paste to MNL Reporting:</h2>
       </div>
 
       <div class="col-lg-6">
         <ul class="list-inline banner-social-buttons">
           <li>
-            <a href="/" class="btn btn-default btn-lg">
+            <a href="/admin" class="btn btn-default btn-lg">
               <i class="fa fa-bed fa-fw"></i>
-              <span class="network-name">Mail Me</span>
+              <span class="network-name">Copy Paste Reporting</span>
             </a>
           </li>
         </ul>
