--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="intro-message">
-          <h1>CSM BPI Manual API</h1>
+          <h1>Manual API</h1>
           <h3>Copy and Paste Data API</h3>
 
           <hr class="intro-divider">
@@ -33,7 +33,7 @@
 
     <div class="row">
       <div class="col-lg-6">
-        <h2>Learn to Copy and Paste to MNL Reporting:</h2>
+        <h2>Learn to Copy and Paste Reporting:</h2>
       </div>
 
       <div class="col-lg-6">
